--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\geris\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31267969816.properties
+deploy.ant.properties.file=C:\\Users\\rebeca\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31258339017.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4/glassfish/domains/domain1
-j2ee.server.home=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4/glassfish
-j2ee.server.instance=[D:\\Arquivos de Programas\\glassfish-4.1.1\\glassfish4\\glassfish;D:\\Arquivos de Programas\\glassfish-4.1.1\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\geris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=C:/Users/rebeca/personal_domain
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Users\\rebeca\\personal_domain]deployer:gfv3ee6wc:localhost:42958
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
+user.properties.file=C:\\Users\\rebeca\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
