--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.Gson.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -73,6 +74,7 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
