--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,7 @@ j2ee.server.domain=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4/glassfish
 j2ee.server.home=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4/glassfish
 j2ee.server.instance=[D:\\Arquivos de Programas\\glassfish-4.1.1\\glassfish4\\glassfish;D:\\Arquivos de Programas\\glassfish-4.1.1\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=D:/Arquivos de Programas/glassfish-4.1.1/glassfish4
+javac.debug=true
+javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\geris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
